--- a/AgeLapse/Base.lproj/Main.storyboard
+++ b/AgeLapse/Base.lproj/Main.storyboard
@@ -206,21 +206,43 @@
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="248" verticalCompressionResistancePriority="751" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BP8-xt-wMj">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="544.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xXi-zI-tb6">
-                                            <size key="itemSize" width="50" height="50"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="3" minimumInteritemSpacing="0.0" id="xXi-zI-tb6">
+                                            <size key="itemSize" width="80" height="80"/>
+                                            <size key="estimatedItemSize" width="80" height="80"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <inset key="sectionInset" minX="2" minY="5" maxX="2" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="mgQ-I5-eML">
-                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="mgQ-I5-eML" customClass="PhotoCollectionViewCell" customModule="Agelpse" customModuleProvider="target">
+                                                <rect key="frame" x="2" y="5" width="70" height="70"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="p58-sM-FT0">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                                     <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="p9y-XP-EHR">
+                                                            <rect key="frame" x="25" y="25" width="20" height="20"/>
+                                                            <color key="color" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </activityIndicatorView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gLm-6d-Jdj">
+                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="gLm-6d-Jdj" secondAttribute="bottom" id="Cvr-rY-hPs"/>
+                                                        <constraint firstItem="p9y-XP-EHR" firstAttribute="centerY" secondItem="gLm-6d-Jdj" secondAttribute="centerY" id="GaL-31-fWb"/>
+                                                        <constraint firstItem="p9y-XP-EHR" firstAttribute="centerX" secondItem="gLm-6d-Jdj" secondAttribute="centerX" id="OLp-aa-hO8"/>
+                                                        <constraint firstItem="gLm-6d-Jdj" firstAttribute="top" secondItem="p58-sM-FT0" secondAttribute="top" id="fP3-gD-2Ox"/>
+                                                        <constraint firstAttribute="trailing" secondItem="gLm-6d-Jdj" secondAttribute="trailing" id="gT4-Ze-iDo"/>
+                                                        <constraint firstItem="gLm-6d-Jdj" firstAttribute="leading" secondItem="p58-sM-FT0" secondAttribute="leading" id="s92-MU-Hvv"/>
+                                                    </constraints>
                                                 </collectionViewCellContentView>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <connections>
+                                                    <outlet property="imageView" destination="gLm-6d-Jdj" id="uG6-oY-o94"/>
+                                                    <outlet property="spinner" destination="p9y-XP-EHR" id="uoW-Nw-oSQ"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -257,7 +279,7 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="s0A-wQ-sYT" firstAttribute="bottom" secondItem="7XD-hY-ZY9" secondAttribute="bottom" constant="75" id="Ckc-hi-l4Y"/>
                             <constraint firstItem="7XD-hY-ZY9" firstAttribute="leading" secondItem="s0A-wQ-sYT" secondAttribute="leading" id="L6c-Kg-yz1"/>
