--- a/AgeLapse/Base.lproj/Main.storyboard
+++ b/AgeLapse/Base.lproj/Main.storyboard
@@ -190,7 +190,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jfs-XL-zpV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3064" y="662"/>
+            <point key="canvasLocation" x="2783" y="571"/>
         </scene>
         <!--CreateVC-->
         <scene sceneID="hfZ-XL-fIq">
@@ -200,11 +200,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="7XD-hY-ZY9">
-                                <rect key="frame" x="0.0" y="88" width="414" height="699"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="7XD-hY-ZY9">
+                                <rect key="frame" x="0.0" y="88" width="414" height="701"/>
                                 <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="248" verticalCompressionResistancePriority="751" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BP8-xt-wMj">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="544.5"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="748" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BP8-xt-wMj">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="376"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="3" minimumInteritemSpacing="0.0" id="xXi-zI-tb6">
                                             <size key="itemSize" width="80" height="80"/>
@@ -225,44 +225,59 @@
                                                             <rect key="frame" x="25" y="25" width="20" height="20"/>
                                                             <color key="color" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </activityIndicatorView>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gLm-6d-Jdj">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cfk-67-G9Z">
                                                             <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                                         </imageView>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="gLm-6d-Jdj" secondAttribute="bottom" id="Cvr-rY-hPs"/>
-                                                        <constraint firstItem="p9y-XP-EHR" firstAttribute="centerY" secondItem="gLm-6d-Jdj" secondAttribute="centerY" id="GaL-31-fWb"/>
-                                                        <constraint firstItem="p9y-XP-EHR" firstAttribute="centerX" secondItem="gLm-6d-Jdj" secondAttribute="centerX" id="OLp-aa-hO8"/>
-                                                        <constraint firstItem="gLm-6d-Jdj" firstAttribute="top" secondItem="p58-sM-FT0" secondAttribute="top" id="fP3-gD-2Ox"/>
-                                                        <constraint firstAttribute="trailing" secondItem="gLm-6d-Jdj" secondAttribute="trailing" id="gT4-Ze-iDo"/>
-                                                        <constraint firstItem="gLm-6d-Jdj" firstAttribute="leading" secondItem="p58-sM-FT0" secondAttribute="leading" id="s92-MU-Hvv"/>
+                                                        <constraint firstAttribute="bottom" secondItem="cfk-67-G9Z" secondAttribute="bottom" id="J6b-Yf-mSN"/>
+                                                        <constraint firstItem="p9y-XP-EHR" firstAttribute="centerX" secondItem="cfk-67-G9Z" secondAttribute="centerX" id="QxH-7C-ajE"/>
+                                                        <constraint firstItem="p9y-XP-EHR" firstAttribute="centerY" secondItem="cfk-67-G9Z" secondAttribute="centerY" id="TV2-v5-0Qj"/>
+                                                        <constraint firstItem="cfk-67-G9Z" firstAttribute="top" secondItem="p58-sM-FT0" secondAttribute="top" id="ZFk-wb-fYt"/>
+                                                        <constraint firstItem="cfk-67-G9Z" firstAttribute="leading" secondItem="p58-sM-FT0" secondAttribute="leading" id="cL0-mu-LSJ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="cfk-67-G9Z" secondAttribute="trailing" id="xzK-Hr-Rui"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <connections>
-                                                    <outlet property="imageView" destination="gLm-6d-Jdj" id="uG6-oY-o94"/>
+                                                    <outlet property="imageView" destination="cfk-67-G9Z" id="DmV-4r-gAO"/>
                                                     <outlet property="spinner" destination="p9y-XP-EHR" id="uoW-Nw-oSQ"/>
+                                                    <segue destination="cUk-cD-lzi" kind="show" identifier="showImage" id="WGu-yj-VZW"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="748" text="# Photos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XZy-3C-IJ6">
-                                        <rect key="frame" x="173" y="558.5" width="68.5" height="20.5"/>
+                                        <rect key="frame" x="173" y="559" width="68.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUe-cK-QIH">
-                                        <rect key="frame" x="139" y="593" width="136" height="46"/>
+                                        <rect key="frame" x="139" y="594" width="136" height="46"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                         <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
                                         <state key="normal" title="Add Photos">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="addMorePhotos:" destination="oEE-Kw-ODE" eventType="touchUpInside" id="bzU-6Y-wSk"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xEw-CQ-P2K">
+                                        <rect key="frame" x="-47" y="-15.5" width="97" height="46"/>
+                                        <color key="backgroundColor" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <state key="normal" title="Add Music">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="addMusic:" destination="oEE-Kw-ODE" eventType="touchUpInside" id="8nm-8U-PUk"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgp-Sy-tCd">
-                                        <rect key="frame" x="139" y="653" width="136" height="46"/>
+                                        <rect key="frame" x="139" y="655" width="136" height="46"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                         <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
@@ -274,23 +289,28 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="BP8-xt-wMj" secondAttribute="trailing" id="4TI-jM-2OG"/>
-                                    <constraint firstItem="xgp-Sy-tCd" firstAttribute="width" secondItem="hUe-cK-QIH" secondAttribute="width" id="8Yd-bB-fiV"/>
+                                    <constraint firstItem="hUe-cK-QIH" firstAttribute="width" secondItem="xEw-CQ-P2K" secondAttribute="width" id="QrX-PV-u8x"/>
+                                    <constraint firstItem="hUe-cK-QIH" firstAttribute="height" secondItem="xEw-CQ-P2K" secondAttribute="height" id="XiM-8t-MyK"/>
                                     <constraint firstItem="BP8-xt-wMj" firstAttribute="leading" secondItem="7XD-hY-ZY9" secondAttribute="leading" id="kEz-Pd-pKM"/>
+                                    <constraint firstItem="xgp-Sy-tCd" firstAttribute="width" secondItem="xEw-CQ-P2K" secondAttribute="width" id="okw-Cy-94Z"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="s0A-wQ-sYT" firstAttribute="bottom" secondItem="7XD-hY-ZY9" secondAttribute="bottom" constant="75" id="Ckc-hi-l4Y"/>
+                            <constraint firstItem="s0A-wQ-sYT" firstAttribute="bottom" secondItem="7XD-hY-ZY9" secondAttribute="bottom" constant="15" id="Ckc-hi-l4Y"/>
                             <constraint firstItem="7XD-hY-ZY9" firstAttribute="leading" secondItem="s0A-wQ-sYT" secondAttribute="leading" id="L6c-Kg-yz1"/>
                             <constraint firstItem="7XD-hY-ZY9" firstAttribute="top" secondItem="s0A-wQ-sYT" secondAttribute="top" id="uS9-br-7ks"/>
                             <constraint firstItem="s0A-wQ-sYT" firstAttribute="trailing" secondItem="7XD-hY-ZY9" secondAttribute="trailing" id="zlh-ss-phi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="s0A-wQ-sYT"/>
                     </view>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="S9i-gg-c4m"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="addPhotosButton" destination="hUe-cK-QIH" id="Zkq-f8-Qp2"/>
+                        <outlet property="addMusicButton" destination="xEw-CQ-P2K" id="Vg5-KA-uTg"/>
+                        <outlet property="addPhotosButton" destination="hUe-cK-QIH" id="GOJ-6F-Pcv"/>
                         <outlet property="amountLabel" destination="XZy-3C-IJ6" id="FwE-WX-hkZ"/>
                         <outlet property="collectionView" destination="BP8-xt-wMj" id="7MT-ie-Opi"/>
                         <outlet property="generateButton" destination="xgp-Sy-tCd" id="Xh0-AJ-ynk"/>
@@ -299,6 +319,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hnq-2P-ekk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2782.608695652174" y="-177.45535714285714"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="txf-h1-W3D">
+            <objects>
+                <viewController id="cUk-cD-lzi" customClass="ImageViewController" customModule="Agelpse" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Lbv-NM-Rus">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H1o-1P-OL7">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="QVC-Oi-v8u" firstAttribute="bottom" secondItem="H1o-1P-OL7" secondAttribute="bottom" id="3FW-Ed-Lg6"/>
+                            <constraint firstItem="QVC-Oi-v8u" firstAttribute="trailing" secondItem="H1o-1P-OL7" secondAttribute="trailing" id="9O2-1F-Bfe"/>
+                            <constraint firstItem="H1o-1P-OL7" firstAttribute="leading" secondItem="QVC-Oi-v8u" secondAttribute="leading" id="FaV-Er-ZVo"/>
+                            <constraint firstItem="H1o-1P-OL7" firstAttribute="top" secondItem="QVC-Oi-v8u" secondAttribute="top" id="fSk-Qf-Q6m"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="QVC-Oi-v8u"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="GDD-j3-Dqx">
+                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="ofR-zo-Xn0">
+                            <connections>
+                                <action selector="deleteImage:" destination="cUk-cD-lzi" id="CeP-QO-C5I"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="H1o-1P-OL7" id="aoP-IM-lIQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Jz-Aq-3Da" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3488.4057971014495" y="-179.46428571428569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aQf-0e-h7i">
