--- a/AgeLapse/Base.lproj/Main.storyboard
+++ b/AgeLapse/Base.lproj/Main.storyboard
@@ -285,6 +285,9 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                         </state>
+                                        <connections>
+                                            <action selector="generateButtonClicked:" destination="oEE-Kw-ODE" eventType="touchUpInside" id="FqU-kv-2LD"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -354,7 +357,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Jz-Aq-3Da" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3488.4057971014495" y="-179.46428571428569"/>
+            <point key="canvasLocation" x="3899" y="244"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aQf-0e-h7i">
